--- a/assets/sass/_syntax.sass
+++ b/assets/sass/_syntax.sass
@@ -102,7 +102,7 @@ code
     user-select: none
 
 .k, .kc, .kd, .kn, .kp, .kr, .kt, .nt  
-  color: #6ab825
+  color: #ff0000
   font-weight: 500
 
 .kn, .kp
